Scenarios/Secure-Baseline/Apps/RatingsApp/5a-ratings-web-ingress.yaml
# NON-TLS - HTTP Only

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ratings-web
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ratings-web
          servicePort: 80
