Scenarios/Secure-Baseline/Apps/RatingsApp/5b-ratings-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ratings-web-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/appgw-ssl-certificate: aks-agic-tls
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ratings-web
              port: 
              - number: 80
    host: ratingsappgw.westus2.cloudapp.azure.com
  tls:
    - hosts:
      - ratingsappgw.westus2.cloudapp.azure.com
      secretName: aks-ingress-tls
