Scenarios/Secure-Baseline/Apps/RatingsApp/5c-ratings-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ratings-web-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - hosts:
      - ratingsappgw.westus2.cloudapp.azure.com
      secretName: aks-ingress-tls
  rules:
  - host: ratingsappgw.westus2.cloudapp.azure.com
    http:  
      paths:
      - backend:
          serviceName: ratings-web
          servicePort: 80
